--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "Portfolio",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "authors": {
-    "name": "",
-    "email": ""
-  },
-  "repository": "/Portfolio",
+  "private": true,
   "scripts": {
-    "dev": "vuepress dev docs",
-    "src:dev": "vuepress dev src",
-    "build": "vuepress build docs"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "license": "MIT",
+  "dependencies": {
+    "next": "latest",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "devDependencies": {
-    "vuepress": "^1.5.3"
-  },
-  "engines": {
-  "node": "16.x"
-}
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
+  }
 }
